trunk/Archive2/bb/300abd52abca4f/output
main.cpp:1:25: error: ‘size_t’ does not name a type
 struct A { static const size_t Len = 5; }; void fn(A& a) { int arr[a.Len]; }
                         ^
main.cpp: In function ‘void fn(A&)’:
main.cpp:1:70: error: ‘struct A’ has no member named ‘Len’
 struct A { static const size_t Len = 5; }; void fn(A& a) { int arr[a.Len]; }
                                                                      ^
