trunk/Archive2/bb/300abd52abca4f/main.cpp
struct A { static const size_t Len = 5; }; void fn(A& a) { int arr[a.Len]; }